src/app/casino/gameview/gameview.component.css
/* ... */
iframe{
    width: 100%;
    border:none;
}

.header-game-view {
    display: flex;
    margin: 0 20px;
    justify-content: center;
    width: 100%;
    padding: 10px 16px;
    background-color: var(--game);
}

.header-game-view > div {
    flex-grow: 1;
    display: flex;
    align-items: center;
}

.header-game-view .game-name {
    justify-content: left;
    color: var(--foreground-game);
}

.header-game-view .buttons-game-view {
    justify-content: right;
}

.game-name span {
    font-weight: 600;
    margin-top: 6px;
    margin-bottom: 0;
}

.provider-container {
    position: relative;
}

.empty-game-list {
    color: var(--foreground-header);
    opacity: 0.5;
}

.game-list {
    display: flex;
    gap: 10px;
    flex-wrap: wrap;
    -ms-overflow-style: none;
    scrollbar-width: none;
    padding-left: 18px;
    margin-left: -18px;
}

.game-list::-webkit-scrollbar {
    display: none;
}

.game-list-inline {
    flex-wrap: nowrap;
    overflow: scroll;
    scroll-behavior: smooth;
}

.provider-list {
    display: flex;
    gap: 10px;
    flex-wrap: wrap;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

.provider-list::-webkit-scrollbar {
    display: none;
}

.provider-list-inline {
    flex-wrap: nowrap;
    overflow: scroll;
    scroll-behavior: smooth;
}

.provider-list-inline {
    flex-wrap: nowrap;
    overflow: scroll;
    scroll-behavior: smooth;
}

.more-games-fade {
    position: absolute;
    width: 50px;
    height: calc(100% + 20px);
    top: -10px;
    transition: opacity 0.5s;
}

.more-games-fade-right {
    background-image: linear-gradient(to left, rgba(var(--background-rgb), 1) 25%, rgba(var(--background-rgb), 0.01));
    right: 0;
    opacity: 1;
}

.more-games-fade-left {
    background-image: linear-gradient(to right, rgba(var(--background-rgb), 1) 25%, rgba(var(--background-rgb), 0.01));
    left: 0;
    opacity: 0;
}

.social-buttons-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 90%;
}

.social-buttons{
    width: 24px;
    height: 24px;
    margin-top: 8px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}
.social-buttons svg{
    width: 24px;
    height: 24px;
    color: var(--foreground-header);
}

.social-buttons:hover {
    opacity: 0.7;
}

.close-modal-continuar-jogando i{
    color: var(--highlight);
    font-size: 24px;
    padding-right: 8px;
}

.skeleton-container {
    margin: 20px 30px;
}

#expanded-btn-game-opened, #expanded-btn-game-closed, #close-btn-game {
    display: flex;
}

@media only screen and (max-width: 1024px) {
    .game-view {
        z-index: 10000;
    }
    .skeleton-container {
        margin: 20px 15px;
    }
}

@media only screen and (min-width: 482px) and (max-width: 1024px) {
    .provider-list {
        flex-wrap: nowrap;
        overflow: scroll;
        scroll-behavior: smooth;
    }

    .game-list {
        flex-wrap: nowrap;
        overflow: scroll;
        scroll-behavior: smooth;
        padding-left: 16px;
        margin-left: -16px;
    }

    .internal .game-list {
        flex-wrap: wrap;
        gap: 10px;
        justify-content: center;
    }

    .more-games-fade-right {
        background-image: linear-gradient(to left, rgba(var(--background-rgb), 1) 10%, rgba(var(--background-rgb), 0.01));
        right: -2px;
    }

    .more-games-fade-left {
        background-image: linear-gradient(to right, rgba(var(--background-rgb), 1) 10%, rgba(var(--background-rgb), 0.01));
    }

    .more-games-fade {
        height: calc(100% + 10px);
        top: 0;
    }

    .header-game-view {
        display: flex;
        justify-content: space-between;
        align-items: center;
        color: #fff;
        margin: 0;
    }

    .game-view {
        width: 100%;
        height: 100%;
        display: flex;
        flex-direction: column;
        margin-bottom: 10px;
    }

    .game-view-mobile {
        width: 100%;
        height: 100%;
    }

    .header-game-view.in-game {
        position: fixed;
        top: 0;
        width: 100%;
    }

    .game-view-mobile.in-game {
        top: 57px;
        position: fixed;
    }

    .game-frame {
        flex: 1;
        justify-content: center;
        align-items: center;
        position: relative;
        width: 100%;
        height: 100%;
    }

    .game-frame iframe {
        width: 100%;
        height: 100%;
        border: none;
    }

    .bloco-relatedGames {
        margin-top: 40px;
    }

    app-back-page {
        padding: 0 !important;
    }
}

@media only screen and (min-width: 1024px) {
    .game-list,
    .provider-list {
        gap: 15px;
    }
}
/* ... */

